kubernetes/apps/default/livekit/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: livekit
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - livekit.goyangi.io
  rules:
    - backendRefs:
        - name: livekit-app
          port: 7880
