kubernetes/apps/default/livekit/app/lk-jwt-httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lk-jwt-service
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - livekit-jwt.goyangi.io
  rules:
    - backendRefs:
        - name: lk-jwt-service-app
          port: 8080
